@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - November 12th, 2004
 --------------------------------------------------------------------------------
+- 12-11-04: Fixed JCon Account ID list width. [AlexKreuz]
+- 12-11-04: Optimized JCon Account save speed. [AlexKreuz]
 - 12-11-04: Bug #1: Characters with Guild ID 0 could make more Guilds. [AlexKreuz]
 - 12-11-04: Changed servervars save path. [Tsusai]
 - 12-10-04: Commented out debug lines from last addon. [Tsusai]
